--- a/lab-python-data-structures(solved).ipynb
+++ b/lab-python-data-structures(solved).ipynb
@@ -50,6 +50,85 @@
     "\n",
     "Solve the exercise by implementing the steps using the Python concepts of lists, dictionaries, sets, and basic input/output operations. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for product in products:\n",
+    "    quantity = int(input(f\"Enter amount of {product}: \"))\n",
+    "    inventory[product] = quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_orders = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for product in products[:3]:\n",
+    "    order = int(input(f\"Enter amount of {product}: \"))\n",
+    "    customer_orders.add(int(order))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_ordered = len(customer_orders)\n",
+    "percentage_ordered = (total_ordered / sum(inventory.values())) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order_status =(total_ordered,percentage_ordered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for product in inventory:\n",
+    "    inventory[product] -= 1\n",
+    "    print(f\"{product}: {inventory[product]}\")"
+   ]
   }
  ],
  "metadata": {
@@ -68,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
